Implementação da funcionalidade de busca por 1 pedido

--- a/config/locales/order.yml
+++ b/config/locales/order.yml
@@ -4,6 +4,7 @@ pt-BR:
       order: 'Pedido'
     attributes:
       order:
+        code: 'Código'
         warehouse: 'Galpão Destino'
         warehouse_id: 'Galpão Destino'
         supplier: 'Fornecedor'
